--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,5 +1,5 @@
 <h1>All Users</h1>
 
 <% @users.each do |user| %>
-  <a href="/users/<% @user.id %>"><%= @user.name %></a>
+  <a href="/users/<% user.id %>"><%= user.name %></a>
   <% end %>
