--- a/app/views/restaurants/show.erb
+++ b/app/views/restaurants/show.erb
@@ -11,12 +11,12 @@
 
     <h2> People who may want to try it</h2>
     <ul><%@restaurant.users.each do |user| %>
-      <li><a href="/users/#{user.id}"><%user.name %></a><li>
+      <li><a href="/users/#{user.id}"><%= user.name %></a></li>
     <% end %></ul>
 
-    <form class="" action="/restaurant/restaurant_users" method="post">
+    <form class="" action="/restaurants/<%= @restaurant.id %>" method="post">
 
-<select>
+<select name="user">
   <%@users.each do |user| %>
   <option value="<%=user.name %>"><%=user.name%></option>
   <%end%>
