--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -1,6 +1,17 @@
+<h1>Add a Restaurant</h1>
+
 <form class="" action="/restaurants" method="post">
-  Name: <input type="text" name="name" value="">
-  Rating: <input type="text" name="rating" value="">
-  Address: <input type="text" name="address" value="">
-  <input type="submit" name="" value="Submit">
+  <p>
+    <label for="name">Name: </label>
+    <input type="text" name="name" id="name">
+  </p>
+  <p>
+    <label for="rating">Rating: </label>
+    <input type="text" name="rating" id="rating">
+  </p>
+  <p>
+    <label for="address">Address: </label>
+    <input type="text" name="address" id="address">
+  </p>
+    <input type="submit" value="Submit">
 </form>
