--- a/app/views/restaurants/show.erb
+++ b/app/views/restaurants/show.erb
@@ -1,28 +1,23 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Restaurant</title>
-  </head>
-  <body>
-    <h1> Restaurant</h1>
-    Name: <%=@restaurant.name%><br>
-    Rating: <%=@restaurant.rating%><br>
-    Address: <%=@restaurant.address%><br>
+<h1> Restaurant</h1>
 
-    <h2> People who may want to try it</h2>
-    <ul><%@users.each do |user| %>
-      <li><a href="/users/<%=user.id%>"><%= user.name %></a></li>
-    <% end %></ul>
+Name: <%=@restaurant.name%><br>
+Rating: <%=@restaurant.rating%><br>
+Address: <%=@restaurant.address%><br>
 
-    <form class="" action="/restaurants/<%= @restaurant.id %>" method="post">
+<h2> People who may want to try it</h2>
 
-<select name="user">
+<ul>
   <%@users.each do |user| %>
-  <option value="<%=user.name %>"><%=user.name%></option>
-  <%end%>
-</select>
-<input type="submit" name="" value="Submit">
-    </form>
+  <li><a href="/users/<%=user.id%>"><%= user.name %></a></li>
+  <% end %>
+</ul>
 
-  </body>
-</html>
+<form class="" action="/restaurants/<%= @restaurant.id %>" method="post">
+  <select name="user">
+    <%@users.each do |user| %>
+      <option value="<%=user.name %>"><%=user.name%></option>
+    <%end%>
+  </select>
+  <input type="submit" name="" value="Submit">
+</form>
+
