--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,5 +1,7 @@
 <h1>All Users</h1>
 
-<% @users.each do |user| %>
-  <a href="/users/<% user.id %>"><%= user.name %></a>
+<ul>
+  <% @users.each do |user| %>
+    <li><a href="/users/<%= user.id %>"><%= user.name %></a></li>
   <% end %>
+</ul>
