--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>New Users</title>
-  </head>
-  <body>
-    <form class="" action="/users" method="post">
+<h1>Sign Up</h1>
 
-
-    <h1>Sign Up</h1>
-    Name:<input type="text" name="name" value="">
-    <input type="submit" name="" value="Submit">
-    </form>
-  </body>
-</html>
+<form class="" action="/users" method="post">
+  <p><label for="name">Name: </label>
+  <input type="text" name="name" id="name"></p>
+  <input type="submit" name="" value="Submit">
+</form>
