--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -3,5 +3,5 @@
 <form class="" action="/users" method="post">
   <p><label for="name">Name: </label>
   <input type="text" name="name" id="name"></p>
-  <input type="submit" name="" value="Submit">
+  <input type="submit" value="Submit">
 </form>
