--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -7,3 +7,4 @@ Name: <%=@user.name%>
     <li><a href= "/restaurants/<%= restaurant.id %>"><%=restaurant.name%></a></li>
   <% end %>
 </ul>
+<a href="/users/<%= @user[:id] %>/edit"><button>Edit</button></a>
