--- a/app/views/restaurants/show.erb
+++ b/app/views/restaurants/show.erb
@@ -7,8 +7,8 @@ Address: <%=@restaurant.address%><br>
 <h2> People who may want to try it</h2>
 
 <ul>
-  <%@users.each do |user| %>
-  <li><a href="/users/<%=user.id%>"><%= user.name %></a></li>
+  <% @restaurant.users.each do |user| %>
+  <li><a href="/users/<%= user.id %>"><%= user.name %></a></li>
   <% end %>
 </ul>
 
@@ -18,7 +18,7 @@ Address: <%=@restaurant.address%><br>
       <option value="<%=user.name %>"><%=user.name%></option>
     <%end%>
   </select>
-  <input type="submit" name="" value="Submit">
+  <input type="submit" value="Submit">
 </form>
 
 <p><a href="/restaurants/<%= @restaurant.id %>/edit"><button>Edit</button></a></p>
