--- a/app/views/restaurants/edit.erb
+++ b/app/views/restaurants/edit.erb
@@ -1,7 +1,7 @@
 <h1>Edit a Restaurant</h1>
 
 <form class="" action="/restaurants/<%= @restaurant.id %>" method="post">
-<input id="hidden" type="hidden" name="_method" value="post">
+<input id="hidden" type="hidden" name="_method" value="patch">
   <p>
     <label for="name">Name: </label>
     <input type="text" name="restaurant[name]" id="name" value="<%= @restaurant.name %>">
