--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -7,4 +7,12 @@ Name: <%=@user.name%>
     <li><a href= "/restaurants/<%= restaurant.id %>"><%=restaurant.name%></a></li>
   <% end %>
 </ul>
-<a href="/users/<%= @user[:id] %>/edit"><button>Edit</button></a>
+
+<a href="/users/<%= @user[:id] %>/edit"><button>Edit User</button></a>
+
+<p>
+  <form action="/users/<%= @user.id %>/delete" method="post">
+    <input id="hidden" type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete User">
+  </form>
+</p>
