--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -1,5 +1,18 @@
 <h1>Add a Restaurant</h1>
 
+<h3>Search Yelp for a Cuisine in Your City</h3>
+<form action="/restaurants/search" method="post">
+  <p>
+  <label for="city">City: </label>
+  <input type="text" name="city" id="city"/>
+  </p>
+  <p>
+  <label for="cuisine">Cuisine: </label>
+  <input type="text" name="options[term]" id="cuisine"/>
+  </p>
+  <input type="submit" value="Submit">
+</form>
+
 <form class="" action="/restaurants" method="post">
   <p>
     <label for="name">Name: </label>
