--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -8,7 +8,7 @@
   </p>
   <p>
   <label for="cuisine">Cuisine: </label>
-  <input type="text" name="options[term]" id="cuisine"/>
+  <input type="text" name="cuisine" id="cuisine"/>
   </p>
   <input type="submit" value="Submit">
 </form>
