--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -4,5 +4,5 @@
   <input id="hidden" type="hidden" name="_method" value="patch">
   <p><label for="name">Name: </label>
   <input type="text" name="user[name]" id="name" value="<%= @user.name %>"></p>
-  <input type="submit" value="Submit">
+  <input class="submit_btn" type="submit" value="Submit">
 </form>
