--- a/app/views/restaurants/edit.erb
+++ b/app/views/restaurants/edit.erb
@@ -14,5 +14,5 @@
     <label for="address">Address: </label>
     <input type="text" name="restaurant[address]" id="address" value="<%= @restaurant.address %>">
   </p>
-    <input type="submit" value="Submit">
+    <input class="submit_btn" type="submit" value="Submit">
 </form>
