--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -10,7 +10,7 @@
   <label for="cuisine">Cuisine: </label>
   <input type="text" name="options[term]" id="cuisine"/>
   </p>
-  <input type="submit" value="Submit">
+  <input class="submit_btn" type="submit" value="Submit">
 </form>
 
 <form class="" action="/restaurants" method="post">
@@ -26,5 +26,5 @@
     <label for="address">Address: </label>
     <input type="text" name="address" id="address">
   </p>
-    <input type="submit" value="Submit">
+    <input class="submit_btn" type="submit" value="Submit">
 </form>
