add autofocus to forms

--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -4,7 +4,7 @@
 <form action="/restaurants/search" method="post">
   <p>
   <label for="city">City: </label>
-  <input type="text" name="city" id="city"/>
+  <input type="text" name="city" id="city" autofocus/>
   </p>
   <p>
   <label for="cuisine">Cuisine: </label>
