--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -2,6 +2,6 @@
 
 <form class="" action="/users" method="post">
   <p><label for="name">Name: </label>
-  <input type="text" name="name" id="name"></p>
+  <input type="text" name="name" id="name" autofocus></p>
   <input class="submit_btn" type="submit" value="Submit">
 </form>
