add feature to find restaurants and users by slugs

--- a/app/views/restaurants/index.erb
+++ b/app/views/restaurants/index.erb
@@ -2,5 +2,5 @@
 
 
   <ul><% @restaurants.each do |restaurant| %>
-  <li><a href="/restaurants/<%=restaurant.id%>"><%=restaurant.name%></a></li>
+  <li><a href="/restaurants/<%=restaurant.slug%>"><%=restaurant.name%></a></li>
   <% end%></ul>
