--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @users.each do |user| %>
-    <li><a href="/users/<%= user.id %>"><%= user.name %></a></li>
+    <li><a href="/users/<%= user.slug %>"><%= user.name %></a></li>
   <% end %>
 </ul>
