--- a/app/views/restaurants/index.erb
+++ b/app/views/restaurants/index.erb
@@ -1,6 +1,17 @@
 <h1>All Restaurants</h1>
+<h3>Search Yelp for a Cuisine in Your City</h3>
+<form action="/restaurants" method="get">
+  <p>
+  <label for="city">City: </label>
+  <input type="text" name="city" id="city"/>
+  </p>
+  <p>
+  <label for="cuisine">Cuisine: </label>
+  <input type="text" name="cuisine" id="cuisine"/>
+  </p>
+  <input type="submit" value="Submit">
+</form>
 
-
-  <ul><% @restaurants.each do |restaurant| %>
+  <ul><% @results.each do |restaurant| %>
   <li><a href="/restaurants/<%=restaurant.id%>"><%=restaurant.name%></a></li>
   <% end%></ul>
