add feature of removing existing restaurant.users from dropdown on restaurant show page

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,7 +4,7 @@ Name: <%=@user.name%>
 <h2>Restaurants</h2>
 <ul>
   <% @user.restaurants.each do |restaurant| %>
-    <li><a href= "/restaurants/<%= restaurant.id %>"><%=restaurant.name%></a></li>
+    <li><a href= "/restaurants/<%= restaurant.slug %>"><%=restaurant.name%></a></li>
   <% end %>
 </ul>
 
