--- a/app/views/restaurants/show.erb
+++ b/app/views/restaurants/show.erb
@@ -17,13 +17,13 @@
 
   <ul>
     <% @restaurant.users.each do |user| %>
-    <li><a href="/users/<%= user.id %>"><%= user.name %></a></li>
+    <li><a href="/users/<%= user.slug %>"><%= user.name %></a></li>
     <% end %>
   </ul>
 
   <form action="/restaurants/<%= @restaurant.id %>/adduser" method="post">
     <select name="user">
-      <%@users.each do |user| %>
+      <%@valid_users.each do |user| %>
         <option value="<%=user.name %>"><%=user.name%></option>
       <%end%>
     </select>
